--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -7,6 +7,7 @@ on:
       - "deploy/dev"
   release:
     types: [published]
+    workflow_dispatch:
 
 env:
   DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
